syntax.txt
program     = stmt*
stmt        = expr ";" 
            | "return" expr ";"
            | "if" "(" expr ")" stmt ("else" stmt)?
expr        = assign
assign      = equality ("=" assign)?
equality    = relational ("==" relational | "!=" relational)*
relational  = add ("<" add | "<=" add | ">" add | ">=" add)*
add         = mul ("+" mul | "-" mul)*
mul         = unary ("*" unary | "/" unary)*
unary       = ("+" | "-")? primary
primary     = num | ident | "(" expr ")"
